--- a/style.css
+++ b/style.css
@@ -138,12 +138,12 @@ body {
 
 .graphic {
     width: 200px;
+    height: 100%;
     background-color: #f22456;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 120px 0;
 }
 
 .container__col-left {
